maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: type mismatch;
 found   : Int
 required: Nothing
  listeX=Array(x)
               ^ShortestPathMaze:32: error: type mismatch;
 found   : Int
 required: Nothing
  listeY=Array(y)
               ^ShortestPathMaze:48: error: not found: type j
def pos(Int:j){
            ^ShortestPathMaze:49: error: not found: value lX
  var x=lX(j)
        ^ShortestPathMaze:49: error: not found: value j
  var x=lX(j)
           ^ShortestPathMaze:50: error: not found: value lY
  var y=lY(j)
        ^ShortestPathMaze:50: error: not found: value j
  var y=lY(j)
           ^ShortestPathMaze:52: error: not found: value concat
    concat(listeX,Array(x))
    ^ShortestPathMaze:53: error: not found: value concat
    concat(listeY,Array(y-1))
    ^ShortestPathMaze:56: error: not found: value concat
    concat(listeX,Array(x-1))
    ^ShortestPathMaze:57: error: not found: value concat
    concat(listeY,Array(y))
    ^ShortestPathMaze:60: error: not found: value concat
    concat(listeX,Array(x))
    ^ShortestPathMaze:61: error: not found: value concat
    concat(listeY,Array(y+1))
    ^ShortestPathMaze:64: error: not found: value concat
    concat(listeX,Array(x+1))
    ^ShortestPathMaze:65: error: not found: value concat
    concat(listeY,Array(y))
    ^